force-app/main/default/objects/Consumivel_do_aditivo__c/Consumivel_do_aditivo__c.object-meta.xml
<CustomObject>
    <label>Consumível do aditivo</label>
    <nameField>
        <displayFormat>CA {000}</displayFormat>
        <label>Nº</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consumíveis do aditivo</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>