force-app/main/default/objects/Consumivel_do_aditivo__c/fields/Aditivo_de_Comodato__c.field-meta.xml
<CustomField>
    <fullName>Aditivo_de_Comodato__c</fullName>
    <label>Aditivo de Comodato</label>
    <referenceTo>Aditivo_de_Comodato__c</referenceTo>
    <relationshipLabel>Consumíveis do aditivo</relationshipLabel>
    <relationshipName>Consum_veis_do_aditivo</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>