force-app/main/default/objects/Consumivel_do_aditivo__c/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Consumíveis do aditivo</relationshipLabel>
    <relationshipName>Consumiveis_do_aditivo</relationshipName>
    <type>Lookup</type>
</CustomField>