force-app/main/default/objects/Consumivel_do_aditivo__c/fields/Valor_total__c.field-meta.xml
<CustomField>
    <fullName>Valor_total__c</fullName>
    <formula>Valor_unitario__c * Quantidade__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>