force-app/main/default/objects/Consumivel_do_aditivo__c/fields/Valor_total_geral__c.field-meta.xml
<CustomField>
    <fullName>Valor_total_geral__c</fullName>
    <formula>Quantidade_total__c *  Valor_total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor total geral</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>